finish cache and filter, modified user service return TODO: other service return, rewrite AuthenticationProvider
Signed-off-by: Par1y <xzfiszoombie@163.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.application.name=Postgraduate
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username: sa
-spring.datasource.password:
-# spring.sql.init.schema-locations==classpath:schema.sql
+spring.datasource.username= sa
+spring.datasource.password=
+# spring.sql.init.schema-locations=classpath:schema.sql
 
 
 spring.data.redis.host=localhost
@@ -20,3 +20,5 @@ spring.cache.type=redis
 spring.data.redis.timeout=10000
 # Redis默认情况下有16个分片，这里配置具体使用的分片
 spring.data.redis.database=0
+
+security.jwtKey="notForProduction"
