--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username= sa
 spring.datasource.password=
-# spring.sql.init.schema-locations=classpath:schema.sql
+ spring.sql.init.schema-locations=classpath:schema.sql
 
 
 spring.data.redis.host=localhost
