--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,9 @@
 spring.application.name=Postgraduate
 
-# spring.datasource.url=jdbc:posgresql://127.0.0.1:3306/postgraduate
-# spring.datasource.driver-class-name=com.postgresql.jdbc.Driver
-# spring.datasource.username: postgres
-# spring.datasource.password:
-
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username= sa
-spring.datasource.password=
- spring.sql.init.schema-locations=classpath:schema.sql
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgraduate
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username: postgres
+spring.datasource.password:
 
 spring.data.redis.host=localhost
 spring.data.redis.password=
@@ -22,3 +15,4 @@ spring.data.redis.timeout=10000
 spring.data.redis.database=0
 
 security.jwtKey="notForProduction"
+security.defaultRole[0]="ROLE_USER"
