--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=Postgraduate
+server.port=3000
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgraduate
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username: postgres
-spring.datasource.password:
+spring.datasource.username:=postgres
+spring.datasource.password=
 
 spring.data.redis.host=localhost
 spring.data.redis.password=
