--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=Postgraduate
 server.port=3000
+server.undertow.threads.io=16
+server.undertow.buffer-size=1024
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgraduate
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username:=postgres
 spring.datasource.password=
