--- a/src/test/kotlin/cn/sicnu/postgraduate/resources/application.properties
+++ b/src/test/kotlin/cn/sicnu/postgraduate/resources/application.properties
@@ -1,17 +1,17 @@
 spring.application.name=Postgraduate
+server.port=3000
+server.undertow.threads.io=16
+server.undertow.buffer-size=1024
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgraduate
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username: postgres
-spring.datasource.password:
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
 spring.data.redis.host=localhost
 spring.data.redis.password=
-# 一般来说是不用配置的，Spring Cache 会根据依赖的包自行装配
 spring.cache.type=redis
-# 连接超时时间（毫秒）
 spring.data.redis.timeout=10000
-# Redis默认情况下有16个分片，这里配置具体使用的分片
 spring.data.redis.database=0
 
 security.jwtKey="notForProduction"
