fix cache, fix jwt auth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,11 @@ spring.datasource.password=
 
 spring.data.redis.host=localhost
 spring.data.redis.password=
+# 一般来说是不用配置的，Spring Cache 会根据依赖的包自行装配
 spring.cache.type=redis
+# 连接超时时间（毫秒）
 spring.data.redis.timeout=10000
+# Redis默认情况下有16个分片，这里配置具体使用的分片
 spring.data.redis.database=0
 
 security.jwtKey="notForProduction"
